Truth in lending... er, sorting.

--- a/vlm-tool.1
+++ b/vlm-tool.1
@@ -21,7 +21,7 @@ vlm-tool \- coalesce /var/log/messages from different hosts and filter
 .PP
 Reads the named
 \fI/var/log/messages\fR
-files, sorts them by the timestamp, and then filters the result.
+files, merges them by the timestamp, and then filters the result.
 Recognizes and automatically expands \fB.bz2\fR and \fB.gz\fR compressed files.
 If no files are named, then the local
 \fI/var/log/messages\fR*
