--- a/README
+++ b/README
@@ -31,7 +31,7 @@ Flooded Logs
    You can just ignore those entries:
 $ vlm-tool -i ntpd node1-messages node2-messages
 
-   Any line matching the pattern ntp is just dropped from the input.
+   Any line matching the pattern ntpd is just dropped from the input.
 
    Have too many trigger patterns to keep writing on the command line? No
    problem, just put them in a file, one per line. Use your ignored
