--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2015-02-25  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* configure.ac: Bumped rev
+
+2015-02-25  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* src/vlm-tool.c: Show filename and line number when complaining
+	about timestamp format.
+
+2015-02-25  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* bootstrap.sh: Try using "markdown2" else "markdown" else punt.
+
+2015-02-25  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* vlm-tool.spec.in: Softened required packages for build.
+
+2015-01-17  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* ChangeLog: Updated change log.
+
 2015-01-17  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
 
 	* configure.ac: Bumped revision.
