--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2017-12-08  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* configure.ac, src/builtins.c: Add "drop_caches:" rule, since
+	seeing that is usually a sign someone is frobbing around when they
+	shouldn't be.
+
+2017-11-30  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
+
+	* ChangeLog: History
+
 2017-11-30  Tommy Reynolds <Tommy.Reynolds@MegaCoder.com>
 
 	* configure.ac, src/vlm-tool.c: Quote everything except the program
